z-index fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ html, body {
     left: 0;
     right: 0;
     margin: auto;
-    z-index: 
+    z-index: -10;
 }
 
 .spacer {
